--- a/index.html
+++ b/index.html
@@ -22,13 +22,12 @@
 
     <nav>
         <a href="#">Home</a>
-        <a href="noticias.html">Noticias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale Conosco</a>
+        <a href="#">Noticias</a>
+        <a href="#">Contato</a>
     </nav>
 
     <main>
-        <section id="noticias">
+        <section>
             <article>
                 <h1>
                     HISTÓRIA DO MASCOTE DO ANDROID
